<resources>
    <string name="app_name">铁塔湖畔</string>
    <string name="splash_text">尊敬的用户，您好</string>
    <string name="click_to_enter">登                 陆</string>
    <string name="click_to_register">注                册</string>
    <string name="user_name">请输入手机号</string>
    <string name="password">请输入密码</string>
    <string name="phone_number">手机号</string>
    <string name="verify_number">验证码</string>
    <string name="protocol_admit">已阅读并同意</string>
    <string name="protocol">服务条款</string>
    <string name="protocol_text">哈哈哈哈我爱你</string>
    <string name="return1">点此返回</string>
    <string name="first_1">这是第一个窗口！</string>
    <string name="second_1">这是第二个窗口！</string>
    <string name="third_1">这是第三个窗口！</string>
    <string name="ad1">这是一则广告</string>
    <string name="app_name1">河南大学小韦儿</string>
    <string name="password_sure">确认密码</string>
    <string name="produce_verify">看不清?换一张</string>
    <string name="skip">跳过</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--定义PagerSlidingTabStrip的属性-->
    <declare-styleable name="PagerSlidingTabStrip">
        <!--底部滑动指示器的颜色-->
        <attr name="pstsIndicatorColor" format="color" />
        <!--底部用于给指示器滑动的区域的颜色-->
        <attr name="pstsUnderlineColor" format="color" />
        <!--分割线的颜色-->
        <attr name="pstsDividerColor" format="color" />
        <!--指示器的高度-->
        <attr name="pstsIndicatorHeight" format="dimension" />
        <!--底部区域的高度-->
        <attr name="pstsUnderlineHeight" format="dimension" />
        <!--分割线与上下的间距-->
        <attr name="pstsDividerPadding" format="dimension" />
        <!--每个Tab的左右边距-->
        <attr name="pstsTabPaddingLeftRight" format="dimension" />
        <!--选中tab的滚动偏移量,基本没有用到-->
        <attr name="pstsScrollOffset" format="dimension" />
        <!--每个Tab的背景图，StateListDrawable-->
        <attr name="pstsTabBackground" format="reference" />
        <!--是否根据tab均为位置，true的时候均分，默认为false,一般都是使用默认值-->
        <attr name="pstsShouldExpand" format="boolean" />
        <!--标题文本是否大写，默认为true-->
        <attr name="pstsTextAllCaps" format="boolean" />
        <attr name="pstsSelectedTabTextColor" format="color" />
        <attr name="pstsIndicatorOffset" format="dimension" />
        <attr name="pstsIndicatorIsRound" format="boolean" />
        <attr name="pstsIndicatorRoundRadius" format="dimension" />
    </declare-styleable>
</resources>