<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/splash_background"
    tools:context=".Register">
    <EditText
        android:layout_gravity="center"
        android:id="@+id/register_phone"
        android:layout_width="@dimen/d5"
        android:layout_height="@dimen/d4"
        android:layout_marginTop="@dimen/d10"
        android:background="@drawable/bg_edit"
        android:ems="10"
        android:inputType="phone"
        android:padding="10sp"
        android:paddingLeft="30sp"
        android:paddingTop="10sp"
        android:paddingRight="15sp"
        android:paddingBottom="15sp"
        android:hint="@string/user_name"
        android:textColor="@color/grey"/>
    <EditText
        android:id="@+id/register_password"
        android:layout_width="@dimen/d5"
        android:layout_height="@dimen/d4"
        android:layout_marginTop="@dimen/d2"
        android:layout_gravity="center"
        android:background="@drawable/bg_edit"
        android:ems="10"
        android:padding="10sp"
        android:paddingLeft="30sp"
        android:paddingTop="10sp"
        android:paddingRight="15sp"
        android:paddingBottom="15sp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/grey"/>
    <EditText
        android:id="@+id/register_pwd"
        android:layout_width="@dimen/d5"
        android:layout_height="@dimen/d4"
        android:layout_marginTop="@dimen/d2"
        android:layout_gravity="center"
        android:background="@drawable/bg_edit"
        android:ems="10"
        android:padding="10sp"
        android:paddingLeft="30sp"
        android:paddingTop="10sp"
        android:paddingRight="15sp"
        android:paddingBottom="15sp"
        android:inputType="textPassword"
        android:hint="@string/password_sure"
        android:textColor="@color/grey"/>
    <EditText
        android:id="@+id/register_code"
        android:layout_width="@dimen/d5"
        android:layout_height="@dimen/d4"
        android:layout_marginTop="@dimen/d2"
        android:layout_gravity="center"
        android:background="@drawable/bg_edit"
        android:ems="10"
        android:padding="10sp"
        android:paddingLeft="30sp"
        android:paddingTop="10sp"
        android:paddingRight="15sp"
        android:paddingBottom="15sp"
        android:hint="@string/verify_number"
        android:textColor="@color/grey"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_verify"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/produce_verify"
            android:background="@drawable/bg_edit"
            android:layout_marginTop="@dimen/d2"
            android:layout_marginLeft="@dimen/d2"/>
        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/d2"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_li1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/d7"
        android:layout_marginTop="@dimen/d8"
        android:layout_marginRight="@dimen/d7"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protocol_admit"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protocol"
            android:layout_marginLeft="@dimen/d1"
            android:textColor="@color/purple"/>
    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="@dimen/d5"
        android:layout_height="@dimen/d4"
        android:layout_marginTop="@dimen/d3"
        android:background="@drawable/bg_edit1"
        android:text="@string/click_to_register"
        android:textSize="@dimen/s1"
        android:layout_gravity="center"/>

</LinearLayout>